--- a/index.html
+++ b/index.html
@@ -19,52 +19,40 @@
         </div>
         <div class="menu">
             <div class="single-menu">
-                <img src="/carbonra.png" alt="">
+                <img src="/img/carbonra.png" alt="">
                 <div class="menu-content"></div>
                 <h4>Spaghetti Carbonara<span>100kr</span></h4>
                 <p class="text1">Pasta with crispy bacon and creamy sauce made from eggs topped with parmesan cheese.</p>
             </div>
         <div class="single-menu">
-            <img src="/pasta-bolognese-vegetar.jpeg" alt="">
+            <img src="/img/pasta-bolognese-vegetar.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Pasta Bolognese<span>100kr</span></h4>
             <p class="text1">Pasta with Italian meat sauce made with minced beef, bacon and tomatoes topped with parmesan cheese.</p>
         </div>
         <div class="single-menu">
-            <img src="/pasta-med-pesto.jpeg" alt="">
+            <img src="/img/pasta-med-pesto.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Pesto Pasta<span>100kr</span></h4>
             <p class="text1">Pasta cooked in our delicious homemade pesto sauce made with fresh basil, pine nuts, olive oil, garlic and parmesan cheese</p>
         </div>
         <div class="single-menu">
-            <img src="/topimage-pizza-special17-800x500.jpeg" alt="">
+            <img src="/img/mragahrita.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Pizza Margherita<span>100kr</span></h4>
             <p class="text1">Pizza with tomato sauce, fresh mozzarella and fresh basil</p>
         </div>
         <div class="single-menu">
-            <img src="/IMG_76581.jpeg" alt="">
+            <img src="/img/peperoni.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Pepperoni Pizza<span>100kr</span></h4>
             <p class="text1">Pizza with tomato sauce, fresh mozzarella, pepperoni and bell peppers</p>
         </div>
         <div class="single-menu">
-            <img src="/Veggie-Pizza-8-500x375.jpeg" alt="">
+            <img src="/img/Veggie-Pizza-8-500x375.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Vegetarian Pizza<span>100kr</span></h4>
             <p class="text1">Pizza with tomato sauce, fresh mozzarella, onion, tomato, bell pepper, mushrooms, olives.</p>
-        </div>
-        <div class="single-menu">
-            <img src="/IMG_9816.jpeg" alt="">
-            <div class="menu-content"></div>
-            <h4>Bruschetta<span>100kr</span></h4>
-            <p class="text1">Delicious toasted bread topped with chopped tomatoes, mozzarella cheese, peppers and fresh herbs.</p>
-        </div>
-        <div class="single-menu">
-            <img src="/tomato-olive-focaccia-1980x1320-119392-1.jpeg" alt="">
-            <div class="menu-content"></div>
-            <h4>Olive & Tomato Focaccia<span>100kr</span></h4>
-            <p class="text1">Italian flat-bread topped with olives and tomatoes.</p>
         </div>
     </div>
     <div class="title">
@@ -72,13 +60,13 @@
     </div>
     <div class="wrapper1">
         <div class="single-menu">
-            <img src="/IMG_9816.jpeg" alt="">
+            <img src="/img/bruchetta.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Bruschetta<span>100kr</span></h4>
             <p class="text1">Delicious toasted bread topped with chopped tomatoes, mozzarella cheese, peppers and fresh herbs.</p>
         </div>
         <div class="single-menu">
-            <img src="/tomato-olive-focaccia-1980x1320-119392-1.jpeg" alt="">
+            <img src="/img/tomato-olive-focaccia-1980x1320-119392-1.jpeg" alt="">
             <div class="menu-content"></div>
             <h4>Olive & Tomato Focaccia<span>100kr</span></h4>
             <p class="text1">Italian flat-bread topped with olives and tomatoes.</p>
